objects/CountyIncomeLimit__c.object
<CustomObject>
    <description>Income limits by county by number of people in a household.</description>
    <fields>
        <fullName>CountyIncomeLimitEID__c</fullName>
        <description>The Enterprise ID for this County Income Limit.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this County Income Limit.</inlineHelpText>
        <label>County Income Limit EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The county where the income limit applies.</description>
        <inlineHelpText>The county where the income limit applies.</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>County Income Limits</relationshipLabel>
        <relationshipName>CountyIncomeLimits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Date that the income limit is effective.</description>
        <inlineHelpText>Date that the income limit is effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HouseholdPersonCount__c</fullName>
        <description>Number of people in the household for this income limit.</description>
        <inlineHelpText>Number of people in the household for this income limit.</inlineHelpText>
        <label>Number of People in Household</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncomeAmount__c</fullName>
        <description>The income amount that is a limit for this level.</description>
        <inlineHelpText>The income amount that is a limit for this level.</inlineHelpText>
        <label>Income Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncomeLevel__c</fullName>
        <description>The level of income that applies to this income limit.</description>
        <inlineHelpText>The level of income that applies to this income limit.</inlineHelpText>
        <label>Income Level</label>
        <picklist>
            <picklistValues>
                <fullName>Very Low Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>County Income Limit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>County Income Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Income Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>